--- a/client/package.json
+++ b/client/package.json
@@ -1,55 +1,40 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "proxy": "http://localhost:3001",
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.2",
-    "@testing-library/user-event": "^12.2.2",
-    "axios": "^0.21.0",
-    "jwt-decode": "^3.1.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4",
-    "arrow-keys-react": "1.0.6",
-    "color": "^3.1.2",
-    "react-responsive": "^8.0.3",
-    "react-spinners": "^0.8.1",
-    "react-spring": "^8.0.27",
-    "react-switch": "^5.0.1",
-    "react-toggle": "^4.1.1",
-    "react-use-gesture": "^7.0.5",
-    "styled-components": "5.0.1"
-  },
-  "devDependencies": {
-    "gh-pages": "^2.2.0",
-    "typescript": "3.3.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "react-tetris",
+	"version": "1.0.0",
+	"description": "",
+	"keywords": [],
+	"main": "src/index.js",
+	"homepage": "http://mpirescarvalho.github.io/react-tetris",
+	"dependencies": {
+		"arrow-keys-react": "1.0.6",
+		"color": "^3.1.2",
+		"react": "16.12.0",
+		"react-dom": "16.12.0",
+		"react-responsive": "^8.0.3",
+		"react-scripts": "^3.4.0",
+		"react-spinners": "^0.8.1",
+		"react-spring": "^8.0.27",
+		"react-switch": "^5.0.1",
+		"react-toggle": "^4.1.1",
+		"react-use-gesture": "^7.0.5",
+		"styled-components": "5.0.1"
+	},
+	"devDependencies": {
+		"gh-pages": "^2.2.0",
+		"typescript": "3.3.3"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test --env=jsdom",
+		"eject": "react-scripts eject",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
+	},
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	]
 }
